syntax = "proto3";

option csharp_namespace = "ZooAnimals";

service GrpcAnimals {
    rpc GetAllAnimals (GetAllRequest) returns (AnimalsResponse);
}

message GetAllRequest {}

message GrpcAnimalsModel{
    int32 animalsId = 1;
    string name = 2;
}

message AnimalsResponse {
    repeated GrpcAnimalsModel animal = 1;
}
